--- a/Sa'ad Abdullah 2154528/app/src/main/res/layout-land/activity_main.xml
+++ b/Sa'ad Abdullah 2154528/app/src/main/res/layout-land/activity_main.xml
@@ -7,6 +7,7 @@ android:layout_height="match_parent"
 tools:context=".MainActivity">
 
 <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/recyclerView"
     android:layout_width="412dp"
     android:layout_height="726dp"
     tools:layout_editor_absoluteX="1dp"
