--- a/Sa'ad Abdullah 2154528/app/src/main/res/layout/activity_main.xml
+++ b/Sa'ad Abdullah 2154528/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,9 @@ android:layout_height="match_parent"
 tools:context=".MainActivity">
 
 <androidx.recyclerview.widget.RecyclerView
-    android:layout_width="412dp"
-    android:layout_height="726dp"
+    android:id="@+id/recyclerView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     tools:layout_editor_absoluteX="1dp"
     tools:layout_editor_absoluteY="7dp"
     tools:ignore="MissingConstraints" />
