--- a/Sa'ad Abdullah 2154528/app/src/main/res/layout-land/activity_main.xml
+++ b/Sa'ad Abdullah 2154528/app/src/main/res/layout-land/activity_main.xml
@@ -6,12 +6,12 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".MainActivity">
 
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/recyclerView"
-    android:layout_width="412dp"
-    android:layout_height="726dp"
-    tools:layout_editor_absoluteX="1dp"
-    tools:layout_editor_absoluteY="7dp"
-    tools:ignore="MissingConstraints" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="733dp"
+        android:layout_height="409dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-1dp"
+        tools:layout_editor_absoluteY="1dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
