--- a/Sa'ad Abdullah 2154528/app/src/main/res/layout-land/content_view.xml
+++ b/Sa'ad Abdullah 2154528/app/src/main/res/layout-land/content_view.xml
@@ -144,7 +144,7 @@
             app:layout_constraintVertical_bias="0.796" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/item_img"
             android:layout_width="235dp"
             android:layout_height="169dp"
             app:layout_constraintBottom_toBottomOf="parent"
