--- a/Sa'ad Abdullah 2154528/app/src/main/res/layout-land/content_view.xml
+++ b/Sa'ad Abdullah 2154528/app/src/main/res/layout-land/content_view.xml
@@ -10,6 +10,8 @@
 
         <TextView
             android:id="@+id/titel_id"
+            android:textSize="24dp"
+            android:textStyle="bold"
             android:layout_width="337dp"
             android:layout_height="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -99,7 +101,7 @@
         <TextView
             android:layout_width="157dp"
             android:layout_height="22dp"
-            android:text="@string/beschrijving_string"
+            android:text="Beschrijving"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.153"
@@ -111,7 +113,7 @@
             android:id="@+id/textView11"
             android:layout_width="157dp"
             android:layout_height="22dp"
-            android:text="@string/matriaal_string"
+            android:text="Materiaal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.153"
@@ -149,10 +151,10 @@
             android:layout_height="169dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.568"
+            app:layout_constraintHorizontal_bias="0.925"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.239" />
+            app:layout_constraintVertical_bias="0.066" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
