--- a/Sa'ad Abdullah 2154528/app/src/main/res/layout/content_view.xml
+++ b/Sa'ad Abdullah 2154528/app/src/main/res/layout/content_view.xml
@@ -10,7 +10,8 @@
         android:layout_height="match_parent">
 
         <TextView
-
+            android:textStyle="bold"
+            android:textSize="32dp"
             android:id="@+id/titel_id"
             android:layout_width="280dp"
             android:layout_height="39dp"
@@ -103,7 +104,7 @@
         <TextView
             android:layout_width="157dp"
             android:layout_height="22dp"
-            android:text="@string/beschrijving_string"
+            android:text="Beschrijving"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.153"
@@ -115,7 +116,7 @@
             android:id="@+id/textView11"
             android:layout_width="157dp"
             android:layout_height="22dp"
-            android:text="@string/matriaal_string"
+            android:text="Materiaal:"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.153"
@@ -149,8 +150,11 @@
 
         <ImageView
             android:id="@+id/item_img"
-            android:layout_width="235dp"
-            android:layout_height="169dp"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_height="200dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.431"
