--- a/Sa'ad Abdullah 2154528/app/src/main/res/layout/item_view.xml
+++ b/Sa'ad Abdullah 2154528/app/src/main/res/layout/item_view.xml
@@ -9,6 +9,7 @@
     <ImageView
         android:layout_width="75dp"
         android:layout_height="75dp"
+        android:scaleType="centerCrop"
         android:padding="4dp"
         android:id="@+id/imageView"/>
 
@@ -23,6 +24,8 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="29dp"
+            android:textStyle="bold"
+            android:textSize="16sp"
             android:text="TextView" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
